Data table formatting fixes: uses YYYY-MM-DD date formatting; right-aligns numeric cells.

--- a/static/style.css
+++ b/static/style.css
@@ -12,3 +12,13 @@
   width: 800px;
   margin: auto;
 }
+
+#data th, #data td {
+  text-align: center;
+}
+#data td {
+  white-space: nowrap;
+}
+#data td.numeric {
+  text-align: right;
+}
